--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,7 +3,7 @@ name: EZZA PORTFOLIO
 on:
   push:
     branches:
-        - "main"
+        - main
 
 jobs:
   build:
@@ -22,5 +22,7 @@ jobs:
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
+        permissions:
+          contents: write
         with:
           folder: build
