--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
   "plugins": [
-    ["styled-components", { "ssr": true, "displayName": true, "preprocess": false } ],
+    ["styled-components", { "ssr": true, "displayName": true, "preprocess": false } ]
   ]
 }
